# chat_with_pdf

./: .gitignore  README.md  chat.py  ingest.py  limitations.py  pyproject.toml
data/: constitution.txt
